# vector-structure

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: python-publish.yml
docs/source/: api.rst  conf.py  index.rst
tests/: test_vector_structure.py
vector_structure/: __init__.py  structure.py
