[project]
name = "vector-structure"
version = "1.0.0"
description = ""
authors = [{ name = "Pierre Ballif", email = "pierre@ballif.eu"}]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["vector", "structure", "block", "matrix"]
dependencies = []

[tool.ruff.lint]
select = ["B", "A", "I", "D", "E4", "E7", "E9", "F"]
ignore = ["D203", "D213", "D104", "D100", "D105", "D107"]
